[package]
name = "new_grader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
libc = "0.2.169"
rayon = "1.10.0"
serde = {version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tempdir = "0.3.7"
thiserror = "2.0.9"
wait-timeout = "0.2.0"

[target.'cfg(target_os = "x86_64-linux-gnu-gcc")'.dependencies]
perf-event = "0.4.8"
